--- a/scss/components/Card-scansVa.scss
+++ b/scss/components/Card-scansVa.scss
@@ -18,7 +18,8 @@
     margin-bottom: 20px;
     box-shadow: 5px 5px 5px $main-color;
     @media screen and (max-width: $xs) {
-        width: calc(100% - 20px);
+        width: calc(45%);
+        height: 200px;
     }
     @media screen and (min-width: $xs) and (max-width: $md) {
         width: calc(50% - 20px);
@@ -46,6 +47,9 @@
         position: relative;
         width: 100%;
         height: 300px;
+        @media screen and (max-width: $xs) {
+            height: 200px;
+        }
         background-size: cover;
         text-decoration: none;
         cursor: pointer;
